Update links, add map API key and begin to refactor performers table

--- a/404.html
+++ b/404.html
@@ -148,7 +148,7 @@
 								Blog
 							</a>
 							<ul class="dropdown-menu">
-								<li><a href="gridblog.html">Grid Blog</a></li>
+								<li><a href="php/performers.php">Grid Blog</a></li>
 								<li><a href="gridblog2.html">Grid + Sidebar</a></li>
 								<li><a href="sidebar_blog.html">Sidebar Blog</a></li>
 								<li><a href="blog_post.html">Sidebar Post</a></li>
