--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 								Members
 							</a>
 							<ul class="dropdown-menu">
-								<li><a href="gridblog.html">Performers' Area</a></li>
-								<li><a href="gridblog2.html">Administration</a></li>
+								<li><a href="php/performers.php">Performers' Area</a></li>
+								
 							</ul>
 						</li>
 						<li>
