--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,8 @@
 								Members
 							</a>
 							<ul class="dropdown-menu">
-								<li><a href="gridblog.html">Performers' Area</a></li>
-								<li><a href="gridblog2.html">Administration</a></li>
+								<li><a href="php/performers.php">Performers' Area</a></li>
+
 							</ul>
 						</li>
 						<li>
@@ -215,7 +215,7 @@
 	<script src="js/topeffect.js"></script>
 
 	<!--MAP-->
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDxFBvbGbxqHQLR_OAWHKXOaAa6YgSaJos&amp;language=en"></script>
 	<script src="js/map.js" type="text/javascript"></script>
 
 </body>
