Complete refactoring og performers table and add styling

--- a/join.html
+++ b/join.html
@@ -85,7 +85,7 @@
 							</a>
               <ul class="dropdown-menu">
                 <li><a href="php/performers.php">Performers' Area</a></li>
-                
+
               </ul>
             </li>
             <li>
@@ -122,62 +122,67 @@
               How To Join Us
             </div>
           </div>
-          <div class="col-md-10 nofloat">
-            <p>
-              <strong>
+
+          <div class="row pad45">
+            <div class="col-md-10 col-md-offset-1 nofloat">
+              <p>
+                <strong>
                   The entry criteria for admission to TYO vary from section to section and depend to a degree upon current strength.
                 </strong>
-            </p>
-            <p>
-              As a guide, a grade 6/7 level is minimal. For wind players the standard will be slightly higher - effectively
-              these positions are solo chairs. Clarinettists will be expected to possess a pair of instruments
-              (Bb and A) and to bring them to all rehearsals. Horn and trumpet players should have some
-              transpostition experience; trombonists should have a working knowledge of the tenor clef
-              (and be prepared to become acquainted with the alto clef).
-            </p>
+              </p>
+              <p>
+                As a guide, a grade 6/7 level is minimal. For wind players the standard will be slightly higher - effectively
+                these positions are solo chairs. Clarinettists will be expected to possess a pair of
+                instruments (Bb and A) and to bring them to all rehearsals. Horn and trumpet players
+                should have some transpostition experience; trombonists should have a working knowledge
+                of the tenor clef (and be prepared to become acquainted with the alto clef).
+              </p>
 
-            <p> Intermediate string players applying with grade 6 should bear in mind that youth orchestras
-              necessarily operate with a mixed range of abilities: it’s not so vital that you are negotiating
-              with total security absolutely every note in the difficult passages (the details will be
-              covered by the more experienced instrumentalists who are), it’s more important that each
-              individual is making a meaningful contribution to the weight of sound in the section. All
-              the while you will be developing invaluable ensemble skills and learning from the musicians
-              around you, as well as discovering the sheer thrill of playing in a good symphony orchestra.
-            </p>
-            <p>
-              You will also find that nothing improves your playing so much as the challenge of tackling a rapid turnover
-              of demanding programmes under the tutelage of expert coaches. In all, the experience is
-              designed to be as enjoyable and educative as possible.
-            </p>
+              <p> Intermediate string players applying with grade 6 should bear in mind that youth orchestras
+                necessarily operate with a mixed range of abilities: it’s not so vital that you are negotiating
+                with total security absolutely every note in the difficult passages (the details will
+                be covered by the more experienced instrumentalists who are), it’s more important that
+                each individual is making a meaningful contribution to the weight of sound in the section.
+                All the while you will be developing invaluable ensemble skills and learning from the
+                musicians around you, as well as discovering the sheer thrill of playing in a good symphony
+                orchestra.
+              </p>
+              <p>
+                You will also find that nothing improves your playing so much as the challenge of tackling a rapid turnover
+                of demanding programmes under the tutelage of expert coaches. In all, the experience
+                is designed to be as enjoyable and educative as possible.
+              </p>
 
-            <p>
-              TYO operates an informal entry policy. As a new applicant you will be invited to attend a rehearsal and
-              then speak to the section coach at the end, who may ask you to play a short piece of your
-              choosing. There might also be a sight-reading exercise. </p>
-            <p>
-              Periodically there may be re-auditions within sections - to reorganise seating for example.
-            </p>
-            <p>
-              If you would like to be considered for membership, or for any further information, please contact our
-              administrator at <a href="mailto:thamesyouthmusic@gmail.com">thamesyouthmusic@gmail.com</a>.</p>
-            <p>
-              TYO rehearses at<a href="http://www.tiffingirls.kingston.sch.uk/" target="_blank"> Tiffin Girls' School</a>,
-              Richmond Road, Kingston upon Thames from 6.15-8.45pm on Monday evenings during term time,
-              6.15pm - 8.45pm. Click <a href="http://www.streetmap.co.uk/newmap.srf?x=518089&y=170985&z=0&sv=kt2+5pl&st=2&pc=kt2+5pl&mapp=newmap.srf&searchp=newsearch.srf"
-                target="_blank">here</a> for a map to the school. Subscriptions are kept deliberately low
-              to be as inclusive as possible, with financial assistance available for those who require
-              it.
-            </p>
+              <p>
+                TYO operates an informal entry policy. As a new applicant you will be invited to attend a rehearsal and
+                then speak to the section coach at the end, who may ask you to play a short piece of
+                your choosing. There might also be a sight-reading exercise. </p>
+              <p>
+                Periodically there may be re-auditions within sections - to reorganise seating for example.
+              </p>
+              <p>
+                If you would like to be considered for membership, or for any further information, please contact our
+                administrator at <a href="mailto:thamesyouthmusic@gmail.com">thamesyouthmusic@gmail.com</a>.</p>
+              <p>
+                TYO rehearses at<a href="http://www.tiffingirls.kingston.sch.uk/" target="_blank"> Tiffin Girls' School</a>,
+                Richmond Road, Kingston upon Thames from 6.15-8.45pm on Monday evenings during term time,
+                6.15pm - 8.45pm. Click <a href="http://www.streetmap.co.uk/newmap.srf?x=518089&y=170985&z=0&sv=kt2+5pl&st=2&pc=kt2+5pl&mapp=newmap.srf&searchp=newsearch.srf"
+                  target="_blank">here</a> for a map to the school. Subscriptions are kept deliberately
+                low to be as inclusive as possible, with financial assistance available for those who
+                require it.
+              </p>
+            </div>
           </div>
 
 
-          <div class="row pad45">
-            <div class="col-md-6">
+          <div class="row">
+            <div style="text-align:center" class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
               <img src="./img/cadogan/images/DSCF0048.jpg">
             </div>
+          </div>
 
-
-            <div class="col-md-6">
+          <div class="row pad45">
+            <div class="col-md-10 col-md-offset-1 nofloat">
               <p> Intermediate string players applying with grade 6 should bear in mind that youth orchestras
                 necessarily operate with a mixed range of abilities: it’s not so vital that you are negotiating
                 with total security absolutely every note in the difficult passages (the details will
