Add social media links and reformat text pages

--- a/404.html
+++ b/404.html
@@ -197,11 +197,11 @@
 				<div class="center footer">
 					<div class="social-icons">
 						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
 						</span>
 											
 						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
 						</span>
 								
 						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
