--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a href="https://soundcloud.com/thamesyouthorchestra" target="blank">Audio Archive</a></li>
-								<li><a href="videos.html">Videos</a></li>
+								<li><a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w" target="blank">Videos</a></li>
 								<li><a href="gallery.html">Photos</a></li>
 							</ul>
 						</li>
@@ -85,7 +85,7 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a href="php/performers.php">Performers' Area</a></li>
-								
+
 							</ul>
 						</li>
 						<li>
@@ -120,7 +120,7 @@
 			</div>
 
 			<div class="row pad45">
-				<div class="team_desc">
+				<div class="col-md-10 col-md-offset-1 nofloat">
 					<p>
 						Thames Youth Orchestra was founded in 2005 and is based in South West London.
 					</p>
@@ -147,91 +147,40 @@
 						Registered Charity No. 1121177
 					</p>
 				</div>
-				<div id="clients_sm" class="owl-carousel owl-theme" style="opacity: 1; display: block;">
-					<div class="owl-wrapper-outer">
-						<div class="owl-wrapper grabbing" style="width: 2384px; left: 0px; display: block; transform: translate3d(-193px, 0px, 0px);">
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo1.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo2.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo3.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo4.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo5.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo6.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo7.png" alt="">
-								</div>
-							</div>
-							<div class="owl-item" style="width: 149px;">
-								<div class="item">
-									<img src="img/clients/logo8.png" alt="">
-								</div>
-							</div>
-						</div>
-					</div>
+			</div>
+		</div>
 
-
-
-
-
-
-
-				</div>
-
-				<!--FOOTER-->
-				<div class="center footer">
-					<div class="social-icons">
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="#"><i class="fa fa-twitter"></i></a>
+		<!--FOOTER-->
+		<div class="center footer">
+			<div class="social-icons">
+				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
 				</span>
 
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="#"><i class="fa fa-facebook"></i></a>
+				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
 				</span>
 
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="#"><i class="fa fa-youtube"></i></a>
+				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
 				</span>
 
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+
 				</span>
 
-					</div>
+			</div>
 
-					<div id="copyright">
-						&copy; THAMES YOUTH ORCHESTRA
-					</div>
-					<p class="madeby">
-						Registered Charity No. 1121177
-					</p>
-				</div>
-				<!--//END-->
+			<div id="copyright">
+				&copy; THAMES YOUTH ORCHESTRA
+			</div>
+			<p class="madeby">
+				Registered Charity No. 1121177
+			</p>
+		</div>
+		<!--//END-->
 
-				<!--//END MAIN-->
+		<!--//END MAIN-->
 	</main>
 	<!--//-->
 
