--- a/performers.html
+++ b/performers.html
@@ -76,7 +76,7 @@
 							</a>
               <ul class="dropdown-menu">
                 <li><a href="https://soundcloud.com/thamesyouthorchestra" target="blank">Audio Archive</a></li>
-                <li><a href="videos.html">Videos</a></li>
+                <li><a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w" target="blank">Videos</a></li>
                 <li><a href="gallery.html">Photos</a></li>
               </ul>
             </li>
@@ -122,19 +122,19 @@
           <div class="center footer">
             <div class="social-icons">
               <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
 				</span>
 
               <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
 				</span>
 
               <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="#"><i class="fa fa-youtube"></i></a>
+					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
 				</span>
 
               <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+					
 				</span>
 
             </div>
