--- a/gallery.html
+++ b/gallery.html
@@ -35,71 +35,9 @@
 <body>
 	<div id="load"></div>
 
-	<!--header-->
-	<header class="header">
-		<!--menu-->
-		<nav id="main_menu" class="navbar" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<!--toggle-->
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-				 <span class="icon-bar"></span>
-				 <span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-					<!--logo-->
-					<div class="logo">
-						<a href="index.html"><img src="img/logo.png" alt="" /></a>
-					</div>
-				</div>
-				<div class="collapse navbar-collapse" id="menu">
-					<ul class="nav navbar-nav pull-right">
-						<li>
-							<a href="index.html">Home</a>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">
-								About Us
-							</a>
-							<ul class="dropdown-menu">
-								<li><a href="about.html">About</a></li>
-								<li><a href="meet_orchestra.html">Meet the Orchestra</a></li>
-								<li><a href="staff.html">Meet the Staff</a></li>
-								<li><a href="tour.html">Tour</a></li>
-								<li><a href="chair.html">Sponsor a Chair</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="join.html">Join</a>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">
-								Media
-							</a>
-							<ul class="dropdown-menu">
-								<li><a href="https://soundcloud.com/thamesyouthorchestra" target="blank">Audio Archive</a></li>
-								<li><a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w" target="blank">Videos</a></li>
-								<li><a href="gallery.html">Photos</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">
-								Members
-							</a>
-							<ul class="dropdown-menu">
-								<li><a href="php/performers.php">Performers' Area</a></li>
-								
-							</ul>
-						</li>
-						<li>
-							<a href="contact.html">Contact</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-	<!--//header-->
+	<!--header loaded from header.html -->
+	<div id="headerBanner"></div>
+	<!-- / header -->
 
 	<!--TOP IMAGE-->
 	<section id="intro-small-fixed">
@@ -146,7 +84,7 @@
 				</span>
 
 						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-					
+
 				</span>
 
 					</div>
@@ -177,10 +115,11 @@
 	<script src="js/wow.js"></script>
 	<script src="js/topeffect.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
-
-	<!--MAP-->
-	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
-	<script src="js/map.js" type="text/javascript"></script>
+	<script>
+		$(function() {
+			$("#headerBanner").load("header.html");
+		});
+	</script>
 
 </body>
 
