Fix login issue, fix 404 page and add random compat to plugins

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Login Form Using jQuery - Demo Preview</title>
+	<title>Login To TYO</title>
 	<meta name="robots" content="noindex, nofollow">
 	<!-- Include CSS File Here -->
 	<link rel="stylesheet" href="css/login.css" />
@@ -18,9 +18,9 @@
 			<form class="form" method="post" action="#">
 				<h2>Please log in to view this page</h2>
 				<label>Username :</label>
-				<input type="text" name="username" id="username">
+				<input type="text" name="username" id="username"autocomplete="username">
 				<label>Password :</label>
-				<input type="password" name="password" id="password">
+				<input type="password" name="password" id="password" autocomplete="current-password">
 				<input type="button" name="login" id="login" value="Login">
 			</form>
 		</div>
