--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
             </button>
         <!--logo-->
         <div class="logo">
-          <a href="index.html"><img src="img/emblem.png" alt="" /></a>
+          <a href="./index.html"><img src="img/emblem.png" alt="" /></a>
         </div>
       </div>
       <div class="collapse navbar-collapse" id="menu">
@@ -25,16 +25,16 @@
                   About Us
                   </a>
             <ul class="dropdown-menu">
-              <li><a href="about.html">About</a></li>
-              <li><a href="meet_orchestra.html">Meet the Orchestra</a></li>
-              <li><a href="staff.html">Meet the Staff</a></li>
-              <li><a href="tour.html">Tour</a></li>
-              <li><a href="chair.html">Sponsor a Chair</a></li>
-              <li><a href="policies.html">Policies</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./meet_orchestra.html">Meet the Orchestra</a></li>
+              <li><a href="./staff.html">Meet the Staff</a></li>
+              <li><a href="./tour.html">Tour</a></li>
+              <li><a href="./chair.html">Sponsor a Chair</a></li>
+              <li><a href="./policies.html">Policies</a></li>
             </ul>
           </li>
           <li>
-            <a href="join.html">Join</a>
+            <a href="./join.html">Join</a>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">
@@ -43,7 +43,7 @@
             <ul class="dropdown-menu">
               <li><a href="https://soundcloud.com/thamesyouthorchestra" target="blank">Audio Archive</a></li>
               <li><a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w" target="blank">Videos</a></li>
-              <li><a href="gallery.html">Photos</a></li>
+              <li><a href="./gallery.html">Photos</a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -51,11 +51,11 @@
                   Members
                   </a>
             <ul class="dropdown-menu">
-              <li><a href="php/performers.php">Performers' Area</a></li>
+              <li><a href="./php/performers.php">Performers' Area</a></li>
             </ul>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
           </li>
         </ul>
       </div>
