Update files from live site

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
 				
 						<div class="lead">
 							The page you were <strong>looking</strong> for appears to have been moved, deleted or does not exist. 
-							Why not find out <a href="./about.html">who we are</a>, browse our <a href="./gallery.html">gallery</a> or 
+							Why not find out <a href="./about.html">who we are</a>, browse our <a href=".https://soundcloud.com/thamesyouthorchestra">music library</a> or 
 							<a href="./contact.html">contact</a> us.
 						</div>
 					</div>
