--- a/gallery.html
+++ b/gallery.html
@@ -68,45 +68,40 @@
 
 				</div>
 
-				<!--FOOTER-->
-				<div class="center footer">
-					<div class="social-icons">
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-				</span>
+			<!--FOOTER-->
+	  
+	  
 
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-				</span>
-
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-				</span>
-
-						<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-
-				</span>
-
-					</div>
-
-					<div id="copyright">
-						&copy; THAMES YOUTH ORCHESTRA
-					</div>
-					<p class="madeby">
-						Registered Charity No. 1121177
-					</p>
-				</div>
-				<!--//END-->
-
-				<!--//END MAIN-->
-	</main>
-	<!--//-->
-
-	<!--BACK TO TOP-->
-	<a href="#"><i class="go-top fa fa-angle-up"></i></a>
-	<!--//BACK TO TOP-->
-
-
+				 <div class="center footer-no-marg">
+		<div id="logos"></div>
+      <div class="social-icons">
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+                  <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+                  <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+                  <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+        </span>
+      </div>
+      <div id="copyright">
+        &copy; THAMES YOUTH ORCHESTRA
+      </div>
+      <p class="madeby">
+        Registered Charity No. 1121177
+      </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
+    </div>
+    <!--//END-->
+    <!--//END MAIN-->
+  </main>
+  <!--//-->
+  <!--BACK TO TOP-->
+  <a href="#"><i class="go-top fa fa-angle-up"></i></a>
+  <!--//BACK TO TOP-->
 	<!--SCRIPTS -->
 	<script src="js/jquery.js"></script>
 	<script src="js/retina.js"></script>
