--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <!-- C -->
           <div class="tp-caption sub tp-resizeme  lfl stl" data-x="center" data-y="400" data-speed="800" data-start="2100"
             data-easing="easeOutExpo" style="z-index: 4">
-            Bold programming to challenge young musicians
+            Bold and challenging programming
           </div>
           <!-- D-
                         <div class="tp-caption customin tp-resizeme"
@@ -212,8 +212,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="lead3">
-            Thames Youth Orchestra is one of the leading youth orchestras in London
-          </div>
+            Thames Youth Orchestra - one of the UK's leading youth orchestras</div>
         </div>
         <div class="col-md-8">
           <!-- CAROUSEL -->
@@ -228,35 +227,29 @@
             </div>
           </div>
           <!-- //CAROUSEL-->
-          <p>Thames Youth Orchestra is a full symphony orchestra comprising more than sixty young musicians
-            drawn from over thirty South West London schools and beyond.</p>
-          <p>Founded in 2005, TYO has gone from strength to strength, performing at prestigious London venues
-            including the Royal Albert Hall, St. John&rsquo;s Smith Square, LSO St Luke&rsquo;s, Cadogan
-            Hall and the Barbican Centre. TYO also undertakes annual overseas tours, and has played to
-            packed audiences at major venues across Europe.</p>
-          <p>TYO now has a permanent staff of professional musicians and comprises more than sixty young
-            players drawn from numerous local schools. Its ethos is defined by a challenging, adventurous
-            approach to programming, which combines well-established large-scale orchestral favourites
-            with twentieth century rarities and new commissions.
-          </p>
-          <p>TYO also has a sister ensemble, the Thames Youth Jazz Orchestra, for talented young big band
-            musicians.
-          </p>
+          <p>Thames Youth Orchestra is a large-scale independent youth symphony orchestra based in South West London. Since its foundation in 2005, TYO has  developed into a richly-resourced orchestral training programme playing a prominent artistic and educational role in its community. In 2018, TYO   entered into a ground-breaking partnership  with Kingston University, working as the university's official Orchestra-in-Residence.</p>
+          <p>The orchestra comprises 70 young musicians drawn from over 30 local schools whose work is overseen by  an outstanding staff of highly-experienced professional musicians. TYO runs fast-track tuition schemes on harp, double bass, percussion, viola and orchestral keyboard; has commissioned new works from composers  and video artists; undertakes regular schools and outreach projects and has  worked on many occasions with a wide range of professional musicians, artists, actors, broadcasters and arts  organisations. It has performed extensively in London (with concerts given at the  Barbican Centre, the Royal Albert Hall, Cadogan Hall, LSO St. Luke&rsquo;s, St. John&rsquo;s Smith  Square) and annually on tour across Europe. </p>
+         <div class="col-md-60 center-block text-center">	
+			 <p><img src="img/tyjo-transparent.png" alt="" class="center"/></p></div>
+		   <p>TYO also has a sister ensemble, the Thames Youth Jazz Orchestra, for talented young jazz
+            instrumentalists and singers. TYJO has performed in clubs and venues across Europe, as well as in jazz venues around London and the South East.         </p>
         </div>
+		 
         <div class="col-md-1">
         </div>
         <div class="col-md-3">
-          <h5 class="marg-top0">Concerts</h5>
+          <h5 class="marg-top0">Next Concert</h5>
           <hr />
-          <h6 class="meta-small">JULY 14TH 2018, 7:30pm<br/>
+          <h6 class="meta-small">Post-Tour EVENT</h6>
+          <h6 class="meta-small">September 8TH 2018, 7:30pm<br/>
                         ST. MATTHIAS CHURCH, RICHMOND
-                     </h6>
+          </h6>
           <hr />
           <h5 class="marg-top0">Listen</h5>
-          <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/271770373&color=%236c8484&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
+          <iframe width="120%" height="250" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/271770373&color=%236c8484&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
           <!--end jp_container_1-->
           <hr />
-          <h5 class="marg-top0">Join</h5> We currently have vacancies in most sections. Look at our <a href "#">How to Join</a> page
+          <h5 class="marg-top0">Join</h5> We currently have vacancies in most sections. Look at our <a href="join.html" target="_blank" "#">How to Join</a> page
           for more information.
           <hr />
         </div>
@@ -286,19 +279,22 @@
                				</section>
                			<!--//CTA SECTION-->
     <!--FOOTER-->
+	  
+	  
     <div class="center footer-no-marg">
+		<div id="logos"></div>
       <div class="social-icons">
         <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
                   <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-                  </span>
+        </span>
         <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
                   <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-                  </span>
+        </span>
         <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
                   <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-                  </span>
+        </span>
         <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-                  </span>
+        </span>
       </div>
       <div id="copyright">
         &copy; THAMES YOUTH ORCHESTRA
@@ -306,6 +302,7 @@
       <p class="madeby">
         Registered Charity No. 1121177
       </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
     </div>
     <!--//END-->
     <!--//END MAIN-->
