--- a/about.html
+++ b/about.html
@@ -48,83 +48,76 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h1>
-						About
+						TYO
 					</h1>
 
-					<div class="lead">
-						A friggin' sweet orchestra
-					</div>
+					<div class="lead">Outstanding music-making since 2005</div>
 				</div>
 			</div>
 
-			<div class="row pad45">
+			<div class="row pad1">
 				<div class="col-md-10 col-md-offset-1 nofloat">
 					<p>
-						Thames Youth Orchestra was founded in 2005 and is based in South West London.
-					</p>
+						Thames Youth Orchestra (TYO) was founded in 2005. Initially a collaboration between Tiffin School and The Tiffin Girls' School in Kingston upon Thames, by the end of its first year the orchestra was welcoming players from six additional local schools. That number has since grown to around 30, with members  now coming from schools and colleges in Kingston, Richmond, Wimbledon, Sutton, Hounslow, Ealing, Wandsworth, and rural Surrey, as well as gap year and home-schooled students from across South West London. From 2018 TYO began a partnership with Kingston University as its official Orchestra-in-Residence, forming a core part of the university's community work and offering educational opportunities to its Masters students.</p>
+					
+					<p>Underpinning the TYO  ethos from the start has been a challenging,
+						adventurous approach to programming, in which well-established large-scale orchestral favourites have been prepared alongside
+						 twentieth century rarities and new commissions. TYO has made a feature of exploring lesser-heard corners of  twentieth and twenty-first century music, programming music by Panufnik (<em>Sinfonia Sacra</em>), Sallinen (Symphonies 1  and 4), Messiaen (<em>Les Offrandes Oubliées</em>),  Adès (<em>…but all shall be well</em>),  Takemitsu (<em>A Flock Descends into the  Pentagonal Garden</em>), Milhaud (<em>Le Boeuf  Sur Le Toit), </em>Honneger (<em>Pacific 231</em>),  Roy Harris (Symphony No. 3), Korngold (film scores to <em>The Adventures of Robin Hood</em>, <em>The Sea Hawk</em>,<em> Kings Row</em>,<em> Captain Blood</em>,<em> The Prince and the Pauper</em>) and Varèse (<em>Ionisation</em>),  alongside such repertoire staples as <em>The  Planets, Pini Da Roma</em>, <em>Appalachian Spring</em>, <em>Taras Bulba, The Firebird, Scheherazade; </em>and  symphonies by Mahler (Nos. 1, 2, 4), Bruckner (No. 4), Shostakovich (Nos. 5,  10, 15), Vaughan Williams (Nos. 2, 3, 5), and Sibelius (Nos. 1 and 5).					</p>
+				  <p>
+						TYO has performed Copland's <em>Lincoln Portrait</em> with Simon Callow narrating, Rimsky-Korsakov's <em>Scheherazade </em>to live illustration by James Mayhew, and Elgar's Cello Concerto with Guy Johnston as soloist. The orchestra has featured in several BBC television programmes, has performed at London's Barbican Centre, Royal
+						Albert Hall, Cadogan Hall, St John's Smith Square, and on tour in venues
+						in Germany, Spain, Italy, Croatia, Slovakia, the Czech Republic, and Hungary.</p>
+					<p>TYO's rehearsal process is based upon weekly sectionals followed by a full orchestral rehearsal. Sectionals are run by expert professional coaches, and allow levels of detail to be explored which are only practical in smaller ensemble contexts. Over the years TYO has acquired an extensive collection of instruments and, unusually for a youth orchestra, rehearses weekly with a complement of full orchestral percussion, including celeste, tubular bells, and harp.</p>
+					<p>Many TYO alumni have gone on to enjoy successful professional careers in music, as instrumentalists, singers, educators, academics and administrators.</p>
+					<p>TYO rehearses in the Visconti Studio at the Kingston Hill campus of Kingston University on Thursdays from 6.15 - 8.45pm during term time.
+				  <div class="col-md-60 center-block text-center">	
+					<img src="img/tyjo-transparent.png" alt="" class="center"/></p>
+				</div>
+				<p>
+				  <p>The orchestra's
+						sister ensemble, the <strong>Thames Youth Jazz Orchestra</strong> (TYJO), is a full-strength big band taking players Grades 7 and above.
+					TYJO plays from an extensive pad which includes the major staples of the big band repertoire, from 1930s Swing (Basie, Ellington, Goodman etc.) to contemporary charts (Mintzer, Goodwin, Mingus), and including a wide range of arrangements of film and TV themes, chart hits, Afro-Cuban standards (Puente, Sandoval etc.), selections by Sammy Nestico, Neal Hefti, Quincy Jones and classic Ella Fitzgerald/Sinatra/Rat Pack vocal charts. On occasion (chiefly on tour), the two ensembles, TYO and TYJO, combine to play studio orchestra classics from the golden age of Hollywood, transcribed by Musical Director, Simon Ferris.</p>
 					<p>
-						TYO now has a large permanent staff of highly-respected professional musicians and comprises more than
-						eighty young musicians drawn from numerous local schools. Its ethos is defined by a challenging,
-						adventurous approach to programming, which combines well-established large-scale orchestral favourites
-						with twentieth century rarities and new commissions.
-					</p>
-					<p>
-						TYO has featured in several BBC television programmes, has performed at London's Barbican Centre, Royal
-						Albert Hall, Cadogan Hall, St John's Smith Square, and has played to full houses on tour in venues
-						across Europe.
-					</p>
-					<p>
-						The Thames Youth Sinfonia is TYO's training orchestra, aimed at players Grades 4 and above. The orchestra's
-						sister ensemble, the Thames Youth Jazz Orchestra, is a big band taking players Grades 7 and above.
-					</p>
-					<p>
-						TYO rehearses in Kingston upon Thames on Mondays from 6.15 - 8.45pm during term time; the Sinfonia rehearses
-						from 5.00 - 6.00pm on Mondays, and TYJO rehearses 5.30 - 7.00pm on Fridays.
-					</p>
-					<p>
-						Registered Charity No. 1121177
-					</p>
+						 TYJO rehearses in the Walden Hall at Tiffin School in Kingston upon Thames from 5.30 - 7.00pm on Fridays during term time.</p>
+					<p>&nbsp;</p>
 				</div>
 			</div>
 		</div>
 
-		<!--FOOTER-->
-		<div class="center footer">
-			<div class="social-icons">
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-
-				</span>
-
-			</div>
-
-			<div id="copyright">
-				&copy; THAMES YOUTH ORCHESTRA
-			</div>
-			<p class="madeby">
-				Registered Charity No. 1121177
-			</p>
-		</div>
-		<!--//END-->
-
-		<!--//END MAIN-->
-	</main>
-	<!--//-->
-
-	<!--BACK TO TOP-->
-	<a href="#"><i class="go-top fa fa-angle-up"></i></a>
-	<!--//BACK TO TOP-->
+	<!--FOOTER-->
+	  
+	  
+	  
+    <div class="center footer-no-marg">
+		<div id="logos"></div>
+      <div class="social-icons">
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+                  <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+                  <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+                  <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+        </span>
+      </div>
+      <div id="copyright">
+        &copy; THAMES YOUTH ORCHESTRA
+      </div>
+      <p class="madeby">
+        Registered Charity No. 1121177
+      </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
+    </div>
+    <!--//END-->
+    <!--//END MAIN-->
+  </main>
+  <!--//-->
+  <!--BACK TO TOP-->
+  <a href="#"><i class="go-top fa fa-angle-up"></i></a>
+  <!--//BACK TO TOP-->
 
 
 	<!--SCRIPTS -->
