--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
 					</h1>
 
 					<div class="lead">
-						The Orchestra rehearses weekly during term time at 6:15pm at Tiffin Girls' School:
+						The Orchestra rehearses weekly during term time on Thursday evenings from 6:15-8.45 in the Visconti Studio at the Kingston Hill campus of Kingston University:
 					</div>
 				</div>
 			</div>
 
 			<!--MAP SECTION-->
-			<section id="google-map">
+			<section id="google-map" name="google-map">
 				<div id="google-container"></div>
 				<div id="zoom-in"></div>
 				<div id="zoom-out"></div>
@@ -69,12 +69,18 @@
 				<div class="col-md-5">
 
 					<p>
-						Thames Youth Orchestra<br> Tiffin Girls' School<br> Richmond Road<br> Kingston
-						<br> KT2 5PL
+						Thames Youth Orchestra<br> 
+						Kingston University<br>
+						Kingston Hill Campus
+						<br> 
+						Kingston Hill<br> 
+						Kingston
+						upon Thames<br> 
+						KT2 7LB
 					</p>
 
 					<p>
-						<span class="colour">E</span> - <a class="line" href="mailto:#">admin@thamesyouthorchestra.co.uk</a><br>
+						<span class="colour">E</span> - <a href="mailto:thamesyouthmusic@gmail.com" target="_blank" class="line">thamesyouthmusic@gmail.com</a><br>
 					</p>
 				</div>
 
@@ -106,44 +112,39 @@
 		</div>
 
 		<!--FOOTER-->
-		<div class="center footer">
-			<div class="social-icons">
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-				</span>
-
-				<span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-
-				</span>
-
-			</div>
-
-			<div id="copyright">
-				&copy; THAMES YOUTH ORCHESTRA
-			</div>
-			<p class="madeby">
-				Registered Charity No. 1121177
-			</p>
-		</div>
-		<!--//END-->
-
-		<!--//END MAIN-->
-	</main>
-	<!--//-->
-
-	<!--BACK TO TOP-->
-	<a href="#"><i class="go-top fa fa-angle-up"></i></a>
-	<!--//BACK TO TOP-->
-
-
+	  
+		  
+	  
+    <div class="center footer-no-marg">
+		<div id="logos"></div>
+      <div class="social-icons">
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+                  <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+                  <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+                  <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+        </span>
+      </div>
+      <div id="copyright">
+        &copy; THAMES YOUTH ORCHESTRA
+      </div>
+      <p class="madeby">
+        Registered Charity No. 1121177
+      </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
+    </div>
+    <!--//END-->
+    <!--//END MAIN-->
+  </main>
+  <!--//-->
+  <!--BACK TO TOP-->
+  <a href="#"><i class="go-top fa fa-angle-up"></i></a>
+  <!--//BACK TO TOP-->
 	<!--SCRIPTS -->
 	<script src="js/jquery.js"></script>
 	<script src="js/retina.js"></script>
