--- a/join.html
+++ b/join.html
@@ -48,10 +48,10 @@
       <div class="row">
         <div class="col-lg-12">
           <blockquote class="testimonial_blockquote">
-            <p><i class="fa fa-quote-left colour"></i> "What I enjoy most about TYO is how the orchestra
+            <p>What I enjoy most about TYO is how the orchestra
               goes about its creative process in rehearsal. Although we play some highly demanding repertoire,
               the support between the members and the continual expert guidance means that our finished
-              product is always impressive and the experience always exhilarating." </p>
+              product is always impressive and the experience always exhilarating.</p>
             <span>Pradeep Kannan</span>
           </blockquote>
 
@@ -61,54 +61,47 @@
             </div>
           </div>
 
-          <div class="row pad45">
+          <div class="row pad1">
             <div class="col-md-10 col-md-offset-1 nofloat">
-              <p>
+              
                 <strong>
-                  The entry criteria for admission to TYO vary from section to section and depend to a degree upon current strength.
+                  We generally accept membership applications throughout the year, so please do get in contact if you are interested in joining!
                 </strong>
               </p>
               <p>
-                As a guide, a grade 6/7 level is minimal. For wind players the standard will be slightly higher - effectively
+                TYO operates an informal entry policy. As a new applicant you will probably be invited to attend a rehearsal and
+                then speak to the section coach at the end, who might ask you to play a short accompanied piece of
+              your choosing. There might also be a sight-reading exercise. </p>
+              <p> Periodically there may be re-auditions within sections - to reorganise seating, for example. </p>
+              <p>As a guide, a grade 6/7 level is minimal. For <strong>wind</strong> players the standard will be slightly higher - effectively
                 these positions are solo chairs. Clarinettists will be expected to possess a pair of
-                instruments (Bb and A) and to bring them to all rehearsals. Horn and trumpet players
-                should have some transpostition experience; trombonists should have a working knowledge
-                of the tenor clef (and be prepared to become acquainted with the alto clef).
-              </p>
+                instruments (Bb and A) and to bring them to all rehearsals. <strong>Horn</strong> and <strong>trumpet</strong> players
+                should have some transpostition experience; <strong>trombonists</strong> should have a working knowledge
+                of the tenor clef (and be prepared to become acquainted with the alto clef). </p>
 
-              <p> Intermediate string players applying with grade 6 should bear in mind that youth orchestras
+              <p> Intermediate <strong>string</strong> players applying with grade 6 should bear in mind that youth orchestras
                 necessarily operate with a mixed range of abilities: it’s not so vital that you are negotiating
                 with total security absolutely every note in the difficult passages (the details will
                 be covered by the more experienced instrumentalists who are), it’s more important that
                 each individual is making a meaningful contribution to the weight of sound in the section.
                 All the while you will be developing invaluable ensemble skills and learning from the
                 musicians around you, as well as discovering the sheer thrill of playing in a good symphony
-                orchestra.
-              </p>
+              orchestra. </p>
               <p>
                 You will also find that nothing improves your playing so much as the challenge of tackling a rapid turnover
                 of demanding programmes under the tutelage of expert coaches. In all, the experience
                 is designed to be as enjoyable and educative as possible.
               </p>
-
-              <p>
-                TYO operates an informal entry policy. As a new applicant you will be invited to attend a rehearsal and
-                then speak to the section coach at the end, who may ask you to play a short piece of
-                your choosing. There might also be a sight-reading exercise. </p>
-              <p>
-                Periodically there may be re-auditions within sections - to reorganise seating for example.
-              </p>
               <p>
                 If you would like to be considered for membership, or for any further information, please contact our
                 administrator at <a href="mailto:thamesyouthmusic@gmail.com">thamesyouthmusic@gmail.com</a>.</p>
               <p>
-                TYO rehearses at<a href="http://www.tiffingirls.kingston.sch.uk/" target="_blank"> Tiffin Girls' School</a>,
-                Richmond Road, Kingston upon Thames from 6.15-8.45pm on Monday evenings during term time,
-                6.15pm - 8.45pm. Click <a href="http://www.streetmap.co.uk/newmap.srf?x=518089&y=170985&z=0&sv=kt2+5pl&st=2&pc=kt2+5pl&mapp=newmap.srf&searchp=newsearch.srf"
-                  target="_blank">here</a> for a map to the school. Subscriptions are kept deliberately
+                TYO rehearses in Coombehurst House and the Visconti Studio at Kingston Univertity's Kingston Hill Campus,
+              Kingston Hill, Kingston upon Thames, Surrey KT2 7LB. Rehearsals run from 6.15-8.45pm on Thursday evenings during term time. Click <a href="https://www.google.co.uk/maps/place/Visconti+Studio/@51.4290006,-0.2702828,17z/data=!4m13!1m7!3m6!1s0x4876094ca213d7af:0x11e95b01f00ef35!2sKingston+Hill,+Kingston+upon+Thames+KT2+7LB!3b1!8m2!3d51.4294569!4d-0.264295!3m4!1s0x4876094ca238ebab:0xb07722731d117560!8m2!3d51.4288956!4d-0.268575"
+                  target="_blank">here</a> for a map to the University music department.</p>
+              <p> Subscriptions are kept deliberately
                 low to be as inclusive as possible, with financial assistance available for those who
-                require it.
-              </p>
+                require it. </p>
             </div>
           </div>
 
@@ -121,63 +114,49 @@
 
           <div class="row pad45">
             <div class="col-md-10 col-md-offset-1 nofloat">
-              <p> Intermediate string players applying with grade 6 should bear in mind that youth orchestras
-                necessarily operate with a mixed range of abilities: it’s not so vital that you are negotiating
-                with total security absolutely every note in the difficult passages (the details will
-                be covered by the more experienced instrumentalists who are), it’s more important that
-                each individual is making a meaningful contribution to the weight of sound in the section.
-                All the while you will be developing invaluable ensemble skills and learning from the
-                musicians around you, as well as discovering the sheer thrill of playing in a good symphony
-                orchestra.
-              </p>
-              <p>
-                You will also find that nothing improves your playing so much as the challenge of tackling a rapid turnover
-                of demanding programmes under the tutelage of expert coaches. In all, the experience
-                is designed to be as enjoyable and educative as possible.
-              </p>
+              <p>&nbsp;</p>
 
             </div>
           </div>
+		</div>
+	  </div>
+	  </div>
+	
 
-          <!--FOOTER-->
-          <div class="center footer">
-            <div class="social-icons">
-              <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-				</span>
-
-              <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-				</span>
-
-              <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-				</span>
-
-              <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-
-				</span>
-
-            </div>
-
-            <div id="copyright">
-              &copy; THAMES YOUTH ORCHESTRA
-            </div>
-            <p class="madeby">
-              Registered Charity No. 1121177
-            </p>
-          </div>
-          <!--//END-->
-
-          <!--//END MAIN-->
+        <!--FOOTER-->
+	  
+	  
+	  
+    <div class="center footer-no-marg">
+		<div id="logos"></div>
+      <div class="social-icons">
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+                  <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+                  <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+                  <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+        </span>
+      </div>
+      <div id="copyright">
+        &copy; THAMES YOUTH ORCHESTRA
+      </div>
+      <p class="madeby">
+        Registered Charity No. 1121177
+      </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
+    </div>
+    <!--//END-->
+    <!--//END MAIN-->
   </main>
   <!--//-->
-
   <!--BACK TO TOP-->
   <a href="#"><i class="go-top fa fa-angle-up"></i></a>
   <!--//BACK TO TOP-->
-
-
   <!--SCRIPTS -->
   <script src="js/jquery.js"></script>
   <script src="js/retina.js"></script>
