--- a/tour.html
+++ b/tour.html
@@ -51,59 +51,61 @@
 						Tour
 					</h1>
 
-          <div class="lead">
-            Tour to Europe, TBC <br> Thursday 23rd August - Friday 31st August 2018
+          <div class="lead"> An integral part of the TYO experience<br>
           </div>
         </div>
       </div>
 
-      <div class="row pad45">
-        <div class="team_desc">
-          <p>
-            <strong>We are currently putting plans together for this year's tour - watch this space!</strong>
-          </p>
-
-        </div>
-
-        <!--FOOTER-->
-        <div class="center footer">
-          <div class="social-icons">
-            <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
-					<a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
-				</span>
-
-            <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
-					<a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
-				</span>
-
-            <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
-					<a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
-				</span>
-
-            <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
-
-				</span>
-
-          </div>
-
-          <div id="copyright">
-            &copy; THAMES YOUTH ORCHESTRA
-          </div>
-          <p class="madeby">
-            Registered Charity No. 1121177
-          </p>
-        </div>
-        <!--//END-->
-
-        <!--//END MAIN-->
+      <div class="row pad10">
+        <p>TYO and  TYJO undertake an annual European tour during the long summer holiday. Over the years this has developed into one of the most important weeks of the TYO year, during which enduring friendships are strengthened, memorable performances given, and unforgettable experiences shared.
+			
+	
+		
+        <p> This year, TYO will be heading to Lake Garda in Italy, with trips during the week to Verona, Venice, Mantua and the lake itself. In previous years the orchestra has travelled to Hungary (Budapest), Croatia (the northern Adriatic coast), Italy (Tuscany), Germany (the Rhineland), the Czech Republic (Prague, Olomouc, Karoly Vary), Slovakia (Briatislava), and most recently, Spain (Barcelona, Madrid, Bilbao). </p>
+        <p>        
+        <p> <strong>Testimonials from previous tours:</strong></p>
+        <p> "TYO tour really is something every player should experience! The week always has the right balance of great concerts, local culture and free time in the sun! It is the perfect opportunity to enjoy playing fantastic music to audiences abroad with old and new friends - I'd recommend it to anyone!" Catherine Hancock </p>
+        <p> "Beach, Barcelona, Britten, Bernstein and Bass Clarinets. Pretty awesome week really." Tom Nichols </p>
+        <p>We are always delighted to welcome players who are not regular members of the orchestra to join us as guests on our annual tours - if you would like details, please email our administrator at <a href="mailto:thamesyouthmusic@gmail.com">thamesyouthmusic@gmail.com</a>! </p>
+      </div>
+	  </div>
+	  </div>
+	
+     <!--FOOTER-->
+		  
+	  
+    <div class="center footer-no-marg">
+		<div id="logos"></div>
+      <div class="social-icons">
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s">
+                  <a href="https://twitter.com/thamesyouthorch"><i class="fa fa-twitter"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s">
+                  <a href="https://en-gb.facebook.com/TYOLondon/"><i class="fa fa-facebook"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1s">
+                  <a href="https://www.youtube.com/channel/UCBnPdEk2fDQTwo5un-ZBX6w"><i class="fa fa-youtube"></i></a>
+        </span>
+        <span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s">
+        </span>
+      </div>
+      <div id="copyright">
+        &copy; THAMES YOUTH ORCHESTRA
+      </div>
+      <p class="madeby">
+        Registered Charity No. 1121177
+      </p>
+      <p class="madeby"><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="0.5s"><img src="img/Kingston University London Main WO CMYK HR.jpg" alt=""/> </span><span class="wow fadeIn" data-wow-offset="80" data-wow-duration="2s" data-wow-delay="1.5s"><a href="https://www.coomberesidential.com/sponsorships" target="_blank"><img src="img/CR 2016.jpg" alt=""/></a></p></span>
+    </div>  
+	  
+  
+    <!--//END-->
+    <!--//END MAIN-->
   </main>
   <!--//-->
-
   <!--BACK TO TOP-->
   <a href="#"><i class="go-top fa fa-angle-up"></i></a>
   <!--//BACK TO TOP-->
-
-
   <!--SCRIPTS -->
   <script src="js/jquery.js"></script>
   <script src="js/retina.js"></script>
